Upgraded ta4j to latest version